--- a/site/erebus-site.css
+++ b/site/erebus-site.css
@@ -29,6 +29,7 @@ a {
 	right: 0;
 	bottom: 0;
 	padding: 1rem;
+	overflow-y: auto;
 }
 
 h1 {
@@ -84,15 +85,16 @@ h2 {
 }
 
 /* Area containing a code example */
-.erb-code-snip {
+code {
+	display: block;
 	border-left: solid 5px #acacac;
-	padding: 10px 15px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	padding: 10px 15px;
 	font-family: 'Courier New', Courier, monospace;
 	background-color: #f3f3f3;
 }
-.erb-code-snip .erb-literal {
+code .erb-literal {
 	color: rgb(175, 80, 25);
 }
 
