--- a/site/erebus-site.css
+++ b/site/erebus-site.css
@@ -86,6 +86,7 @@ h2 {
 
 /* Area containing a code example */
 code {
+	position: relative;
 	display: block;
 	border-left: solid 5px #acacac;
 	margin-top: 10px;
@@ -98,10 +99,64 @@ code .erb-literal {
 	color: rgb(175, 80, 25);
 }
 
+/* Button to execute action inside a code area */
+code .erb-inner-action {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	font-size: 0.7rem;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 /* Block of code with relevant information */
 .erb-doc-note {
 	margin-top: 15px;
 	margin-bottom: 15px;
 	border: solid 1px #acacac;
 	padding: 10px;	
+}
+
+/* Link in a page that contains the option to return to a parent page */
+.erb-return-link {
+	font-size: 1rem;
+}
+
+/* Area containing one or more buttons */
+.erb-buttonbar {
+	padding-top: 15px;
+}
+
+/* Table with columns well defined to provide information about the examples */
+.erb-layout-table {
+	border-spacing: 0;
+	border-collapse: collapse;
+}
+.erb-layout-table thead td {
+	background-color: #f3f3f3;
+	border-top: solid 1px #cecece;
+	border-bottom: solid 1px #cecece;
+}
+.erb-layout-table td {
+	padding: 5px 15px;
+	border-left: solid 1px #cecece;
+	border-right: solid 1px #cecece;
+}
+.erb-layout-table td:first-child {
+	border-left: none;
+}
+.erb-layout-table td:last-child {
+	border-right: none;
+}
+
+/* Area with well defined borders to create a visual separation of its content */
+.erb-bordered {
+	border: solid 1px #cecece;
+	padding: 10px;
+}
+
+.erb-doc-section {
+	margin-top: 20px;
+}
+.erb-doc-section:first-child {
+	margin-top: 0;
 }
