--- a/site/fragments/home.html
+++ b/site/fragments/home.html
@@ -1,13 +1,13 @@
-<div class="erb-doc-header">
+<div class="erbsite-doc-header">
 	<h1>Erebus Core Framework</h1>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <h3>What is Erebus?</h3>
 	Erebus Core is a web framework intended to serve as a swiss army tool to ease the creation of web applications.
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <h3>Why another web framework?</h3>
 	Most existing frameworks try to isolate and restrict the use of the DOM.  
     <br/>
