--- a/site/fragments/quickstart.html
+++ b/site/fragments/quickstart.html
@@ -1,15 +1,15 @@
-<div class="erb-doc-header">
+<div class="erbsite-doc-header">
 	<h1>Quickstart</h1>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
 	Using jsDelivr CDN:
-	<div class="erb-code-snip">
+	<div class="erbsite-code-snip">
 		&lt;script src=<span class="erb-literal">"https://cdn.jsdelivr.net/npm/erebus-core@0.0.13/dist/erebus-core.min.js"</span>&gt;&lt;/script&gt;
 	</div>
 
 	Using unpkg CDN:
-	<div class="erb-code-snip">
+	<div class="erbsite-code-snip">
 		&lt;script src=<span class="erb-literal">"https://unpkg.com/erebus-core@0.0.13/dist/erebus-core.min.js"</span>&gt;&lt;/script&gt;
 	</div>
 </div>
