--- a/site/fragments/sidebar.html
+++ b/site/fragments/sidebar.html
@@ -1,11 +1,11 @@
-<div class="erb-menu">
-    <div class="erb-menu-entry"><a href="#">Introduction</a></div>
-    <div class="erb-menu-entry"><a href="#quickstart">Quick start</a></div>
+<div class="erbsite-menu">
+    <div class="erbsite-menu-entry"><a href="#">Introduction</a></div>
+    <div class="erbsite-menu-entry"><a href="#quickstart">Quick start</a></div>
     
-    <div class="erb-menu-section">API Reference</div>
-    <div class="erb-menu-entry"><a href="#api/events">Erebus.events</a></div>
-    <div class="erb-menu-entry"><a href="#api/element">Erebus.element</a></div>
-    <div class="erb-menu-entry"><a href="#api/form">Erebus.form</a></div>
-    <div class="erb-menu-entry"><a href="#api/formats">Erebus.formats</a></div>
-    <div class="erb-menu-entry"><a href="#api/i18n">Erebus.i18n</a></div>
+    <div class="erbsite-menu-section">API Reference</div>
+    <div class="erbsite-menu-entry"><a href="#api/events">Erebus.events</a></div>
+    <div class="erbsite-menu-entry"><a href="#api/element">Erebus.element</a></div>
+    <div class="erbsite-menu-entry"><a href="#api/form">Erebus.form</a></div>
+    <div class="erbsite-menu-entry"><a href="#api/formats">Erebus.formats</a></div>
+    <div class="erbsite-menu-entry"><a href="#api/i18n">Erebus.i18n</a></div>
 </div>
