Implementing controllers and click events, replacing element by $

--- a/site/fragments/sidebar.html
+++ b/site/fragments/sidebar.html
@@ -4,7 +4,7 @@
     
     <div class="erbsite-menu-section">API Reference</div>
     <div class="erbsite-menu-entry"><a href="#api/events">Erebus.events</a></div>
-    <div class="erbsite-menu-entry"><a href="#api/element">Erebus.element</a></div>
+    <div class="erbsite-menu-entry"><a href="#api/element">Erebus.$</a></div>
     <div class="erbsite-menu-entry"><a href="#api/form">Erebus.form</a></div>
     <div class="erbsite-menu-entry"><a href="#api/formats">Erebus.formats</a></div>
     <div class="erbsite-menu-entry"><a href="#api/i18n">Erebus.i18n</a></div>
